# resumeanalyzer

./: .replit  app.py  auth.py  data_collector.py  email_service.py  expand_training_data.py  forms.py  main.py  ml_engine.py  models.py  pyproject.toml  replit.md
attached_assets/: Pasted-Resume-Job-Compatibility-Analyzer-Full-Stack-ML-Project-Project-Overview-Create-a-fully-functional-1753549645407_1753549645408.txt
data/: massive_data_collector.py  real_data_collector.py  training_data.py
instance/: resume_analyzer.db
static/: auth.css  charts.js  script.js  style.css
templates/: dashboard.html  index.html  training_info.html
templates/auth/: forgot_password.html  login.html  register.html
