[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-mail>=0.9.1",
    "flask-wtf>=1.1.1",
    "wtforms>=3.0.1",
    "werkzeug>=3.0.1",
    "bcrypt>=4.0.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "trafilatura>=2.0.0",
    "requests>=2.32.4",
    "pandas>=2.3.1",
]
